fixed go to top button visibility

--- a/css/events.css
+++ b/css/events.css
@@ -299,6 +299,7 @@ p {
         margin: 70px 0px 70px 0px;
     } 
     #myBtn {
+        display: none;
         right: 5rem;
         width: 50px;
         height: 50px;
